# fractal_pentagon

./: .gitignore  CMakeLists.txt  README.md  fractalPentagon.hpp  main.cpp  renderer.hpp
Utils/: utils.hpp
